--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -27,6 +27,13 @@
   </head>
   <body>
     {{> navbar }}
+    {{#if succes}}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mx-auto"></div>
+      </div>
+    </div>
+    {{/if}}
     {{{body}}}
   </body>
 </html>
