--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <p class="navbar-brand">Enlaces Favoritos</p>
     <button
       class="navbar-toggler"
       type="button"
@@ -13,11 +13,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled">Disabled</a>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link active" aria-current="page" href="/links">Inicio</a>
+        <a class="nav-link" href="/links/add">Agregar Link</a>
       </div>
     </div>
   </div>
